feat: colors change according to the requirement
home page colors changes complete, facebook, twitter & instagrame images colors change to white and when hover on those icon change colors issue fix

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -5,40 +5,40 @@
         <div class="fw-footer__card h-100">
           <h3 class="fw-footer__title">Discover Foodie</h3>
           <ul class="fw-footer__list">
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Investors</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">About us</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Takeaway</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">More</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Newsroom</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Engineering blog</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Design blog</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Gift Cards</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Careers</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Restaurant signup</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Become a rider</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Foodie Talent Directory</a>
             </li>
           </ul>
@@ -48,22 +48,22 @@
         <div class="fw-footer__card h-100">
           <h3 class="fw-footer__title">Legal</h3>
           <ul class="fw-footer__list">
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Terms and conditions</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Privacy</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Cookies</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Modern Slavery Statement</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Tax Strategy</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Section 172 Statement</a>
             </li>
           </ul>
@@ -73,16 +73,16 @@
         <div class="fw-footer__card h-100">
           <h3 class="fw-footer__title">Help</h3>
           <ul class="fw-footer__list">
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Contact</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">FAQs</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Cuisines</a>
             </li>
-            <li>
+            <li class="fw-footer__list-spacing">
               <a href="#!" class="fw-footer__text">Brands</a>
             </li>
           </ul>
@@ -129,8 +129,7 @@
               <img
                 src="assets\svg\facebook-icon.svg"
                 alt="facebook"
-                height="24"
-                width="24"
+                class="fw-footer__facebook-img"
               />
             </a>
           </li>
@@ -141,9 +140,7 @@
               <img
                 src="assets\svg\twitter-svgrepo-com.svg"
                 alt="twitter"
-                height="24"
-                width="24"
-                class="fw-footer__img"
+                class="fw-footer__twitter-img"
               />
             </a>
           </li>
@@ -152,9 +149,7 @@
               <img
                 src="assets\svg\instagram-svgrepo-com.svg"
                 alt="instagram"
-                height="24"
-                width="24"
-                class="fw-footer__img"
+                class="fw-footer__instagram-img"
               />
             </a>
           </li>
