--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -18,7 +18,11 @@
           </a>
           <button mat-button (click)="drawer.toggle()">
             <a>
-              <img src="assets\svg\x-icon.svg" alt="X" height="24" width="24" />
+              <img
+                src="assets\svg\x-icon.svg"
+                alt="X"
+                class="fw-nav__close-img"
+              />
             </a>
           </button>
         </div>
