--- a/src/app/common/side-nav-bar/side-nav-bar.component.scss
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.scss
@@ -3,6 +3,11 @@
     height: 100;
     flex-direction: column;
   }
+
+  &__close-img {
+    width: 24px;
+    filter: invert(75%) sepia(100%) saturate(163.5);
+  }
   &__signup {
     margin-top: 10px;
     background-color: #ba2222;
