--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -116,11 +116,11 @@
   }
 
   &__searchbar-svg {
-    margin-top: 9px;
     margin-left: 20px;
     height: 20px;
     width: 20px;
     margin-top: 23px;
+    filter: invert(75%) sepia(100%) saturate(163.5);
   }
 
   &__search-input {
