feat: menu page colors changes

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -130,9 +130,7 @@
               <img
                 src="assets\svg\menu.svg"
                 alt="menu"
-                height="15px"
-                width="15px"
-                style="margin-bottom: 3px"
+                class="fw-header__menu-img"
               />
               Menu
             </button>
