--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -60,7 +60,7 @@
                     <img
                       src="assets\images\menu-page\star.svg"
                       alt="information-svg"
-                      class="fw-menu__info-img"
+                      class="fw-menu__star-img"
                     />
                     <div>
                       <span class="fw-menu__text1">4.3 Very good</span>
