--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-side-nav-bar></app-side-nav-bar>
-<router-outlet></router-outlet>
+<div class="content" [ngClass]="{'content': !isHomeRoute()}">
+  <router-outlet></router-outlet>
+</div>
+
 <br />
 <app-footer></app-footer>
