feat: menu page header and horizontal bar stickyness fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-side-nav-bar></app-side-nav-bar>
-<div class="content" [ngClass]="{'content': !isHomeRoute()}">
+<div class="content" [ngClass]="{ content: !isHomeRoute() }">
   <router-outlet></router-outlet>
 </div>
 
