--- a/src/app/pages/menu-page/menu-page.component.scss
+++ b/src/app/pages/menu-page/menu-page.component.scss
@@ -101,7 +101,7 @@
     display: grid;
     box-shadow: 0 1px 3px;
     position: sticky;
-    top: 0;
+    top: 87px;
     padding: 20px;
     font-size: 20px;
   }
