style: colors change

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,7 +4,7 @@
       <div class="row fw-home__lpgrow">
         <h1 class="fw-home__landingh1">
           Restaurant food, takeaway and groceries.
-          <span style="color: #d61212">Delivered.</span>
+          <span style="color: #de0d2c">Delivered.</span>
         </h1>
         <div class="fw-home__searchbar">
           <div class="row">
