--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -46,7 +46,7 @@
     }
 
     &--red {
-      background-color: #ba2222;
+      background-color: #de0d2c;
       margin-top: 14px;
       margin-bottom: 14px;
       font-weight: 600;
@@ -72,7 +72,7 @@
     font-weight: 600;
     font-size: 16px;
     color: #fff;
-    background-color: #ba2222;
+    background-color: #de0d2c;
     height: 48px;
     margin-top: 14px;
     margin-bottom: 14px;
