--- a/src/app/pages/signup-page/signup-page.component.scss
+++ b/src/app/pages/signup-page/signup-page.component.scss
@@ -12,7 +12,7 @@
     font-weight: 600;
     font-size: 16px;
     color: #fff;
-    background-color: #00ccbc;
+    background-color: #de0d2c;
     height: 48px;
     margin-top: 14px;
     margin-bottom: 14px;
