--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -4,6 +4,7 @@
   &__search-bar {
     max-width: 100%;
     padding: 8px 16px 8px 40px;
+    border-radius: 21px;
   }
 
   &__search-img {
@@ -49,7 +50,7 @@
   }
 
   &__menu-button {
-    margin-top: 10px;
+    margin-top: 14px;
     padding-left: 4px;
   }
 
