--- a/src/app/common/side-nav-bar/side-nav-bar.component.scss
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.scss
@@ -11,7 +11,7 @@
   }
   &__signup {
     margin-top: 10px;
-    background-color: #ba2222;
+    background-color: #de0d2c;
     min-height: 48px;
     padding: 12px 24px;
     font-weight: 600;
@@ -49,7 +49,7 @@
   }
 
   &__faqs-text:hover {
-    color: #ba2222;
+    color: #de0d2c;
   }
 
   &__lables {
