--- a/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.scss
+++ b/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.scss
@@ -2,6 +2,7 @@
   &__heading1 {
     font-size: 22px;
     font-weight: 700;
+    color: #393e46;
   }
 
   &__card-margin {
@@ -10,6 +11,7 @@
   }
 
   &__card-heading {
+    color: #393e46;
     font-size: 16px;
     font-weight: 600;
   }
