feat: integrate frontend and backend for user registration

--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -3,7 +3,7 @@
     <div
       class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
     >
-      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+      <form [formGroup]="userRegisterForm" (ngSubmit)="onSubmit()">
         <h1 class="row fw-signup__h1">User Registration</h1>
         <div class="fw-signup__inputfield">
           <p class="row">First Name</p>
@@ -15,9 +15,10 @@
                 placeholder="e.g.John"
                 name="firstName"
                 required
-                [formControl]="firstName"
+                formControlName="firstName"
               />
-              <mat-error *ngIf="firstName.hasError('required')"
+              <mat-error
+                *ngIf="userRegisterForm.controls.firstName.hasError('required')"
                 >First Name field is required</mat-error
               >
             </mat-form-field>
@@ -35,9 +36,12 @@
                   placeholder="e.g.Smith"
                   name="lastName"
                   required
-                  [formControl]="lastName"
+                  formControlName="lastName"
                 />
-                <mat-error *ngIf="lastName.hasError('required')"
+                <mat-error
+                  *ngIf="
+                    userRegisterForm.controls.lastName.hasError('required')
+                  "
                   >Last Name field is required</mat-error
                 >
               </mat-form-field>
@@ -56,9 +60,12 @@
                   placeholder="e.g.JohnSmith0123"
                   name="username"
                   required
-                  [formControl]="username"
+                  formControlName="username"
                 />
-                <mat-error *ngIf="username.hasError('required')"
+                <mat-error
+                  *ngIf="
+                    userRegisterForm.controls.username.hasError('required')
+                  "
                   >Username field is required</mat-error
                 >
               </mat-form-field>
@@ -77,9 +84,10 @@
                   placeholder="No 5A, 3rd lane, Pita Kotte, Sri Lanka"
                   name="address"
                   required
-                  [formControl]="address"
+                  formControlName="address"
                 />
-                <mat-error *ngIf="address.hasError('required')"
+                <mat-error
+                  *ngIf="userRegisterForm.controls.address.hasError('required')"
                   >Address field is required</mat-error
                 >
               </mat-form-field>
@@ -94,13 +102,14 @@
               >
                 <input
                   matInput
-                  type="number"
+                  type="text"
                   placeholder="94775775775"
-                  name="contactNumber"
+                  name="contact"
                   required
-                  [formControl]="contactNumber"
+                  formControlName="contact"
                 />
-                <mat-error *ngIf="contactNumber.hasError('required')"
+                <mat-error
+                  *ngIf="userRegisterForm.controls.contact.hasError('required')"
                   >Contact number field is required</mat-error
                 >
               </mat-form-field>
@@ -119,12 +128,14 @@
                   placeholder="e.g.john.smith@gmail.com"
                   name="email"
                   required
-                  [formControl]="email"
+                  formControlName="email"
                 />
-                <mat-error *ngIf="email.hasError('required')"
+                <mat-error
+                  *ngIf="userRegisterForm.controls.email.hasError('required')"
                   >Email field is required</mat-error
                 >
-                <mat-error *ngIf="email.hasError('email')"
+                <mat-error
+                  *ngIf="userRegisterForm.controls.email.hasError('email')"
                   >Enter a valid email</mat-error
                 >
               </mat-form-field>
@@ -143,9 +154,12 @@
                   placeholder="password"
                   name="password"
                   required
-                  [formControl]="password"
+                  formControlName="password"
                 />
-                <mat-error *ngIf="password.hasError('required')"
+                <mat-error
+                  *ngIf="
+                    userRegisterForm.controls.password.hasError('required')
+                  "
                   >Password field is required</mat-error
                 >
               </mat-form-field>
@@ -157,8 +171,6 @@
             mat-button
             type="submit"
             class="fw-signup fw-signup__continue"
-            [disabled]="form.invalid"
-            (click)="signinUser()"
           >
             Signin
           </button>
