feat: add lazy loading to login and signup

--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -30,7 +30,9 @@
       <hr />
       <div class="container fw-nav__sidnavbtn" style="display: grid">
         <button mat-button class="fw-nav__signup">
-          <a class="fw-nav__navtext" routerLink="login">Sign up or log in</a>
+          <a class="fw-nav__navtext" routerLink="auth/login"
+            >Sign up or log in</a
+          >
         </button>
       </div>
       <div class="container" style="padding-bottom: 186px">
