--- a/src/app/feature/auth/pages/signup-page/signup-page.component.html
+++ b/src/app/feature/auth/pages/signup-page/signup-page.component.html
@@ -15,7 +15,7 @@
                 placeholder="e.g.John"
                 name="firstName"
                 required
-                formControlName="firstName"
+                [formControl]="firstName"
               />
               <mat-error *ngIf="firstName.hasError('required')"
                 >First Name field is required</mat-error
@@ -35,7 +35,7 @@
                   placeholder="e.g.Smith"
                   name="lastName"
                   required
-                  formControlName="lastName"
+                  [formControl]="lastName"
                 />
                 <mat-error *ngIf="lastName.hasError('required')"
                   >Last Name field is required</mat-error
@@ -56,7 +56,7 @@
                   placeholder="e.g.JohnSmith0123"
                   name="username"
                   required
-                  formControlName="username"
+                  [formControl]="username"
                 />
                 <mat-error *ngIf="username.hasError('required')"
                   >Username field is required</mat-error
@@ -77,7 +77,7 @@
                   placeholder="No 5A, 3rd lane, Pita Kotte, Sri Lanka"
                   name="address"
                   required
-                  formControlName="address"
+                  [formControl]="address"
                 />
                 <mat-error *ngIf="address.hasError('required')"
                   >Address field is required</mat-error
@@ -98,7 +98,7 @@
                   placeholder="94775775775"
                   name="contact"
                   required
-                  formControlName="contact"
+                  [formControl]="contact"
                 />
                 <mat-error *ngIf="contact.hasError('required')"
                   >Contact number field is required</mat-error
@@ -115,11 +115,11 @@
               >
                 <input
                   matInput
-                  type="email"
+                  type="text"
                   placeholder="e.g.john.smith@gmail.com"
                   name="email"
                   required
-                  formControlName="email"
+                  [formControl]="email"
                 />
                 <mat-error *ngIf="email.hasError('required')"
                   >Email field is required</mat-error
@@ -143,7 +143,7 @@
                   placeholder="password"
                   name="password"
                   required
-                  formControlName="password"
+                  [formControl]="password"
                 />
                 <mat-error *ngIf="password.hasError('required')"
                   >Password field is required</mat-error
